chore: minor general changes